@@ -25,7 +25,7 @@ VERSION=stable
 
 # Choose repositories want to work. Read first REPOSITORIES file.
 # Available repositories : slack,sbo,alien,rlw,slacky,studio,slackr,slonly,
-#                          ktown{latest},multi,slacke{18},salix,slackl
+#                          ktown{latest},multi,slacke{18},salix,slackl,rested
 # slackr (slackers.it) repository must used from Slackware64 current.
 # Ktown (Alien's ktown) repository. Default ktown{latest}.
 # Slacke (Enlightenment E17 and E18) repository. Default slacke{18}.
