@@ -153,6 +153,11 @@ class OthersUpgrade(object):
         self.mirror = "{0}{1}/current/".format(Repo().slackel(), arch)
         self.step = self.step * 2
 
+    def _init_rested(self):
+        self.lib = lib_path + "rested_repo/PACKAGES.TXT"
+        self.mirror = Repo().restricted()
+        self.step = self.step * 2
+
     def start(self):
         '''
         Install packages from official Slackware distribution
