@@ -1,5 +1,5 @@
 Version 2.1.6
-03-1-2015
+07-1-2015
 
 [Updated] - Fix queue downloads.
           - Update find argument.
@@ -7,7 +7,8 @@ Version 2.1.6
           - Update installed package list.
 
 [Feature] - Added custom binary repository.
-
+          - Added Slackware 'patches' repository in PACKAGES.txt file.
+          - Added Alien's restricted repository.
 
 Version 2.1.5
 27-12-2014
